@@ -1,15 +1,18 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 
 package org.elasticsearch.xpack.analytics.topmetrics;
 
+import org.apache.lucene.util.BytesRef;
 import org.elasticsearch.client.analytics.ParsedTopMetrics;
 import org.elasticsearch.common.ParseField;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.time.DateFormatter;
+import org.elasticsearch.common.util.CollectionUtils;
 import org.elasticsearch.common.xcontent.NamedXContentRegistry;
 import org.elasticsearch.index.mapper.DateFieldMapper;
 import org.elasticsearch.plugins.SearchPlugin;
@@ -215,35 +218,47 @@ public class InternalTopMetricsTests extends InternalAggregationTestCase<Interna
     }
 
     public void testGetProperty() {
-        InternalTopMetrics metrics = new InternalTopMetrics(
+        InternalTopMetrics metrics = resultWithAllTypes();
+        assertThat(metrics.getProperty("int"), equalTo(1L));
+        assertThat(metrics.getProperty("double"), equalTo(5.0));
+        assertThat(metrics.getProperty("bytes"), equalTo(new BytesRef("cat")));
+        assertThat((Double) metrics.getProperty("null"), notANumber());
+    }
+
+    public void testGetValuesAsStrings() {
+        InternalTopMetrics metrics = resultWithAllTypes();
+        assertThat(metrics.getValuesAsStrings("int"), equalTo(Collections.singletonList("1")));
+        assertThat(metrics.getValuesAsStrings("double"), equalTo(Collections.singletonList("5.0")));
+        assertThat(metrics.getValuesAsStrings("bytes"), equalTo(Collections.singletonList("cat")));
+        assertThat(metrics.getValuesAsStrings("null"), equalTo(Collections.singletonList("null")));
+    }
+
+    private InternalTopMetrics resultWithAllTypes() {
+        return new InternalTopMetrics(
             "test",
             SortOrder.ASC,
-            Arrays.asList("foo", "bar", "baz"),
+            List.of("int", "double", "bytes", "null"),
             1,
-            Arrays.asList(
+            List.of(
                 new InternalTopMetrics.TopMetric(
                     DocValueFormat.RAW,
                     SortValue.from(1),
                     Arrays.asList(
-                        new MetricValue(DocValueFormat.RAW, SortValue.from(1)),   // foo
-                        new MetricValue(DocValueFormat.RAW, SortValue.from(5.0)), // bar
-                        null                                                      // baz
+                        new MetricValue(DocValueFormat.RAW, SortValue.from(1)),   // int
+                        new MetricValue(DocValueFormat.RAW, SortValue.from(5.0)), // double
+                        new MetricValue(DocValueFormat.RAW, SortValue.from(new BytesRef("cat"))), // str
+                        null                                                      // null
                     )
                 )
             ),
             null
         );
-        assertThat(metrics.getProperty("foo"), equalTo(1L));
-        assertThat(metrics.getProperty("bar"), equalTo(5.0));
-        assertThat((Double) metrics.getProperty("baz"), notANumber());
     }
 
     @Override
     protected List<NamedXContentRegistry.Entry> getNamedXContents() {
-        List<NamedXContentRegistry.Entry> result = new ArrayList<>(super.getNamedXContents());
-        result.add(new NamedXContentRegistry.Entry(Aggregation.class, new ParseField(TopMetricsAggregationBuilder.NAME),
-                (p, c) -> ParsedTopMetrics.PARSER.parse(p, (String) c)));
-        return result;
+        return CollectionUtils.appendToCopy(super.getNamedXContents(), new NamedXContentRegistry.Entry(Aggregation.class,
+                new ParseField(TopMetricsAggregationBuilder.NAME), (p, c) -> ParsedTopMetrics.PARSER.parse(p, (String) c)));
     }
 
     @Override
@@ -251,7 +266,7 @@ public class InternalTopMetricsTests extends InternalAggregationTestCase<Interna
         return createTestInstance(name, metadata, InternalAggregationTestCase::randomNumericDocValueFormat);
     }
 
-    private InternalTopMetrics createTestInstance(String name, 
+    private InternalTopMetrics createTestInstance(String name,
             Map<String, Object> metadata, Supplier<DocValueFormat> randomDocValueFormat) {
         int metricCount = between(1, 5);
         List<String> metricNames = randomMetricNames(metricCount);
@@ -328,6 +343,27 @@ public class InternalTopMetricsTests extends InternalAggregationTestCase<Interna
                 }
             }
         }
+    }
+
+    @Override
+    protected List<InternalTopMetrics> randomResultsToReduce(String name, int count) {
+        InternalTopMetrics prototype = createTestInstance();
+        return randomList(
+            count,
+            count,
+            () -> new InternalTopMetrics(
+                prototype.getName(),
+                prototype.getSortOrder(),
+                prototype.getMetricNames(),
+                prototype.getSize(),
+                randomTopMetrics(
+                    InternalAggregationTestCase::randomNumericDocValueFormat,
+                    between(0, prototype.getSize()),
+                    prototype.getMetricNames().size()
+                ),
+                prototype.getMetadata()
+            )
+        );
     }
 
     @Override
