@@ -1,11 +1,14 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.deprecation;
 
 import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.common.RestApiVersion;
+import org.elasticsearch.common.logging.DeprecationCategory;
 import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
@@ -17,12 +20,10 @@ import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestStatus;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static java.util.Collections.singletonList;
 import static org.elasticsearch.rest.RestRequest.Method.GET;
 
 /**
@@ -66,16 +67,12 @@ public class TestDeprecationHeaderRestAction extends BaseRestHandler {
 
     public static final String DEPRECATED_ENDPOINT = "[/_test_cluster/deprecated_settings] exists for deprecated tests";
     public static final String DEPRECATED_USAGE = "[deprecated_settings] usage is deprecated. use [settings] instead";
+    public static final String COMPATIBLE_API_USAGE = "You are using a compatible API for this request";
 
     private final Settings settings;
 
     public TestDeprecationHeaderRestAction(Settings settings) {
         this.settings = settings;
-    }
-
-    @Override
-    public List<DeprecatedRoute> deprecatedRoutes() {
-        return singletonList(new DeprecatedRoute(GET, "/_test_cluster/deprecated_settings", DEPRECATED_ENDPOINT));
     }
 
     @Override
@@ -85,7 +82,11 @@ public class TestDeprecationHeaderRestAction extends BaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
+        return List.of(
+            // note: RestApiVersion.current() is acceptable here because this is test code -- ordinary callers of `.deprecated(...)`
+            // should use an actual version
+            Route.builder(GET, "/_test_cluster/deprecated_settings").deprecated(DEPRECATED_ENDPOINT, RestApiVersion.current()).build()
+        );
     }
 
     @SuppressWarnings("unchecked") // List<String> casts
@@ -94,10 +95,14 @@ public class TestDeprecationHeaderRestAction extends BaseRestHandler {
         final List<String> settings;
 
         try (XContentParser parser = request.contentParser()) {
+            if (parser.getRestApiVersion() == RestApiVersion.minimumSupported()) {
+                deprecationLogger.compatibleApiWarning("compatible_key", COMPATIBLE_API_USAGE);
+            }
+
             final Map<String, Object> source = parser.map();
 
             if (source.containsKey("deprecated_settings")) {
-                deprecationLogger.deprecate("deprecated_settings", DEPRECATED_USAGE);
+                deprecationLogger.deprecate(DeprecationCategory.SETTINGS, "deprecated_settings", DEPRECATED_USAGE);
 
                 settings = (List<String>) source.get("deprecated_settings");
             } else {
