@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 
 package org.elasticsearch.xpack.security.rest.action.apikey;
@@ -13,14 +14,14 @@ import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.action.RestActions.NodesResponseRestListener;
 import org.elasticsearch.xpack.core.security.action.ClearSecurityCacheAction;
 import org.elasticsearch.xpack.core.security.action.ClearSecurityCacheRequest;
+import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
 
-public class RestClearApiKeyCacheAction extends ApiKeyBaseRestHandler {
+public class RestClearApiKeyCacheAction extends SecurityBaseRestHandler {
 
     public RestClearApiKeyCacheAction(Settings settings, XPackLicenseState licenseState) {
         super(settings, licenseState);
@@ -33,8 +34,7 @@ public class RestClearApiKeyCacheAction extends ApiKeyBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(
-            new Route(POST, "/_security/api_key/{ids}/_clear_cache"));
+        return List.of(new Route(POST, "/_security/api_key/{ids}/_clear_cache"));
     }
 
     @Override
